# phrase_rating

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  schema.sql  tsconfig.json  tslint.json  webpack.config.js
frontend/: package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
frontend/src/templates/: index.html
frontend/src/ts/: main.ts
frontend/src/ts/classes/: phrase.ts
frontend/src/ts/phrases/: hotgarbage.ts  hotmess.ts
frontend/src/ts/util/: api.ts
server/: app.py  pyproject.toml
server/config/: database.yml.dist
server/src/classes/: phrase.py
server/src/db/: config.py  connection.py
server/src/db/models/: __init__.py  phrase.py  vote.py
src/templates/: index.html
src/ts/: main.ts
src/ts/phrases/: base.ts  clusterfuck.ts  index.ts  shitshow.ts
