[tool.poetry]
name = "phrase_server"
version = "0.0.1"
description = ""
authors = ["Colwyn Fritze-Moor <colwyn@colwyn.me>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"

[tool.poetry.dev-dependencies]
black = "19.3b0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
